colocando um pequeno detalhe
colocando um placeholder nos inputs so por beleza mesmo

--- a/Q1/index.html
+++ b/Q1/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <form name="formulario">
-        <input type="text" name="ladoa" id="ladoa"><br>
-        <br><input type="text" name="ladob" id="ladob"><br>
-        <br><input type="text" name="ladoc" id="ladoc"><br>
+        <input type="text" name="ladoa" id="ladoa" placeholder="Digite o valor de a"><br>
+        <br><input type="text" name="ladob" id="ladob" placeholder="Digite o valor de b"><br>
+        <br><input type="text" name="ladoc" id="ladoc" placeholder="Digite o valor de c"><br>
         <br><input type="button" value="Enviar" onClick="identificador()"><br>
         <br><input type="text" name="saida">
         <script src="q1.js"></script>
